--- a/README.html
+++ b/README.html
@@ -52,4 +52,8 @@ function changeColor() {
 #cookie{
   height:40px;
   font-size: 10%;
+}
+button:hover {
+  color: white;
+  background-color:black;
 }</style>
