--- a/README.html
+++ b/README.html
@@ -55,5 +55,5 @@ function changeColor() {
 }
 button:hover {
   color: white;
-  background-color:silver;
+  /*background-color:silver;*/
 }</style>
