--- a/README.html
+++ b/README.html
@@ -1,6 +1,7 @@
 <div id="cookiesection">
  <button>Ask a<img id="cookie" src="https://cdn.afterdawn.fi/v3/news/original/github-logo.png"/>question and click on me</button>
 </div>
+<title>Github 8 ball</title>
 <script>var responses = [
   "No", 
   "Yes",
