--- a/index.html
+++ b/index.html
@@ -57,5 +57,8 @@ function changeColor() {
 button:hover {
   color: white;
   background-color:silver;
-}</style>
-Yeah, I know everything
+}
+ #middle {
+ text-align:center;
+ }</style>
+<div id = "middle">Yeah, I know everything</div>
