--- a/README.html
+++ b/README.html
@@ -61,4 +61,4 @@ button:hover {
  #middle {
  text-align:center;
  }</style>
-<div id = "middle">Yeah, I know everything</div>
+<div id = "middle"><p>Yeah, I know everything</p></div>
