--- a/README.html
+++ b/README.html
@@ -58,7 +58,5 @@ button:hover {
   color: white;
   background-color:silver;
 }
- #middle {
- text-align:center;
- }</style>
-<div id = "middle"><p>Yeah, I know everything</p></div>
+</style>
+
