--- a/README.html
+++ b/README.html
@@ -1,3 +1,7 @@
+<link rel="shortcut icon"
+     href="http://example.com/favicon.ico" />
+
+
 <div id="cookiesection">
  <button>Ask a<img id="cookie" src="https://cdn.afterdawn.fi/v3/news/original/github-logo.png"/>question and click on me</button>
 </div>
