--- a/README.html
+++ b/README.html
@@ -1,5 +1,5 @@
 <link rel="shortcut icon"
-     href="http://example.com/favicon.ico" />
+     href="http://icons.iconarchive.com/icons/kyo-tux/delikate/512/Add-icon.png">
 
 
 <div id="cookiesection">
