--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+  
+<link rel="shortcut icon"
+     href="http://icons.iconarchive.com/icons/kyo-tux/delikate/512/Add-icon.png">
+
+
+
 <div id="cookiesection">
  <button>Ask a<img id="cookie" src="https://cdn.afterdawn.fi/v3/news/original/github-logo.png"/>question and click on me</button>
 </div>
