--- a/README.html
+++ b/README.html
@@ -1,5 +1,4 @@
-<link rel="shortcut icon"
-     href="http://icons.iconarchive.com/icons/kyo-tux/delikate/512/Add-icon.png">
+<html xmlns= "http://www.w3.org/1999/xhml" xml:lang= "en" lang= "en">
 
 
 <div id="cookiesection">
