--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-  
+<html xmlns= "http://www.w3.org/1999/xhml" xml:lang= "en" lang= "en">  
+
+
 <link rel="shortcut icon"
      href="http://icons.iconarchive.com/icons/kyo-tux/delikate/512/Add-icon.png">
 
