--- a/404.html
+++ b/404.html
@@ -3,3 +3,4 @@ permalink: /404.html
 ---
 # 404 error
 Your site is not found ya stupid
+<link rel = "icon" href =https://www.clifton.co.uk/sites/default/files/checkout-icon-returns.png type = "image/x-icon">
